--- a/package.json
+++ b/package.json
@@ -5,14 +5,27 @@
   "repository": "git@github.com:kejadlen/alp-home-assistant",
   "author": "Alpha Chen <alpha@kejadlen.dev>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "dev": "concurrently \"yarn:watch-build\" \"yarn:watch-start\"",
+    "start": "node dist/index.js",
+    "watch-build": "tsc --watch",
+    "watch-start": "nodemon --watch dist ./dist/index.js"
+  },
   "dependencies": {
-    "express": "^4.17.1",
-    "home-assistant-js-websocket": "^4.5.0",
+    "@sentry/integrations": "^5.13.2",
+    "@sentry/node": "^5.13.2",
+    "fp-ts": "^2.5.3",
+    "fp-ts-rxjs": "^0.6.9",
+    "io-ts": "^2.1.2",
     "rxjs": "^6.5.4",
     "ws": "^7.2.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.3",
+    "@types/uuid": "^7.0.0",
+    "@types/ws": "^7.2.2",
+    "concurrently": "^5.1.0",
+    "nodemon": "^2.0.2",
     "typescript": "^3.8.3"
   }
 }
