--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "concurrently \"yarn:watch-build\" \"yarn:watch-start\"",
+    "format": "prettier --write src/**/*.ts",
     "lint": "eslint . --ext .ts",
     "start": "node dist/index.js",
     "watch-build": "tsc --watch",
@@ -30,6 +31,7 @@
     "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
     "nodemon": "^2.0.2",
+    "prettier": "^2.0.1",
     "typescript": "^3.8.3"
   }
 }
